<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dateTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/dateView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/dateTextLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="setDate"
        android:text="@string/dateButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterOrder"
        android:id="@+id/tvSortLabel"
        android:paddingTop="30dp"
        android:layout_alignTop="@+id/tvDateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterSortOldest"
            android:id="@+id/rbOldest"
            android:layout_toRightOf="@+id/rbNewest"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterSortNewest"
            android:id="@+id/rbNewest"
            android:layout_below="@+id/tvSortLabel"
            android:layout_toLeftOf="@+id/textView"
            android:layout_toStartOf="@+id/textView" />

    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newsDeskLabel"
        android:id="@+id/tvNewsDeskLabel"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Foreign"
        android:id="@+id/cbForeign"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sports"
        android:id="@+id/cbSports"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Arts"
        android:id="@+id/cbArts"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fashion &amp; Style"
        android:id="@+id/cbFS"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/btnSave"
        android:layout_gravity="center_horizontal"
        android:onClick="onSave"/>
</LinearLayout>