<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SearchActivity"
    tools:showIn="@layout/activity_search">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etQuery"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btnSearch"
        android:layout_toStartOf="@+id/btnSearch"
        android:hint="@string/hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSearch"
        android:id="@+id/btnSearch"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/search"
        android:onClick="onArticleSearch"/>

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gvResults"
        android:layout_below="@+id/btnSearch"
        android:layout_centerHorizontal="true"
        android:numColumns="2"
        android:horizontalSpacing="15dp" />
</RelativeLayout>
